--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         
         <nav id="nav">
             <form name="chronoForm">
-                <input  id ="start" type="button" name="startstop" value="start" onClick="chronoStart()" />
-                <input id ="reset" type="button" name="reset" value="reset" onClick="chronoReset()" />
-                <input id ="stop" type="button" name="reset" value="stop" onClick="chronoStop()" />
+                <input  id ="start" type="button" name="startstop" value="start" onClick="startGame()" />
+                <input id ="reset" type="button" name="reset" value="pause" onClick="pauseGame()" />
+                <input id ="stop" type="button" name="reset" value="stop" onClick="stopGame()" />
             </form>
         </nav>
     </body>
